--- a/tmux/powerline.conf
+++ b/tmux/powerline.conf
@@ -31,5 +31,5 @@ set -g status-right "#[fg=#15161E,bg=#93a1a1,bold] #h "
 setw -g window-status-activity-style "underscore,fg=#839496,bg=#002b36"
 setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=#839496,bg=#002b36"
-setw -g window-status-format '#[fg=#002b36,bg=#002b36]#[default] #I  #{b:pane_current_path} #[fg=#002b36,bg=#002b36,nobold,nounderscore,noitalics]'
+setw -g window-status-format '#[fg=#002b36,bg=#002b36]#[default] [#I] #{b:pane_current_path} #[fg=#002b36,bg=#002b36,nobold,nounderscore,noitalics]'
 setw -g window-status-current-format '#[fg=#002b36,bg=#eee8d5]#[fg=#0087AF,bg=#eee8d5] #I #[fg=#eee8d5,bg=#0087AF] #{b:pane_current_path} #[fg=#0087AF,bg=#002b36,nobold]'
