--- a/bashtop/bashtop.cfg
+++ b/bashtop/bashtop.cfg
@@ -5,7 +5,7 @@
 color_theme="user_themes/dracula"
 
 #* Update time in milliseconds, increases automatically if set below internal loops processing time, recommended 2000 ms or above for better sample times for graphs
-update_ms="2500"
+update_ms="2600"
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive"
 #* "cpu lazy" updates sorting over time, "cpu responsive" updates sorting directly
@@ -15,7 +15,7 @@ proc_sorting="cpu lazy"
 proc_reversed="false"
 
 #* Show processes as a tree
-proc_tree="false"
+proc_tree="true"
 
 #* Check cpu temperature, only works if "sensors", "vcgencmd" or "osx-cpu-temp" commands is available
 check_temp="false"
