--- a/bashtop/bashtop.cfg
+++ b/bashtop/bashtop.cfg
@@ -9,13 +9,13 @@ update_ms="2600"
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive"
 #* "cpu lazy" updates sorting over time, "cpu responsive" updates sorting directly
-proc_sorting="cpu lazy"
+proc_sorting="cpu responsive"
 
 #* Reverse sorting order, "true" or "false"
 proc_reversed="false"
 
 #* Show processes as a tree
-proc_tree="true"
+proc_tree="false"
 
 #* Check cpu temperature, only works if "sensors", "vcgencmd" or "osx-cpu-temp" commands is available
 check_temp="false"
