--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -21,21 +21,57 @@
         "break",
         "break",
 
-        "title",
+        {
+            "type": "title",
+            "format": "{#1}{1} @ {2} {#}"
+        },
         //"separator",
         "break",
 
-        "os",
-        "kernel",
-        "host",
-        "uptime",
+        {
+            "type": "os",
+            "key": "󰍹  OS  ",
+            "keyColor": "red"
+        },
+        {
+            "type": "host",
+            "key": "  HOST",
+            "keyColor": "yellow"
+        },
+        {
+            "type": "kernel",
+            "key": "󰣘  VER ",
+            "keyColor": "red"
+        },
+        {
+            "type": "uptime",
+            "key": "󱑂  UP  ",
+            "keyColor": "yellow"
+        },
 
         "break",
-
-        "de",
-        "wm",
-        "wmtheme",
-        "shell",
+        
+        {
+            "type": "shell",
+            "key": "  SH  ",
+            "keyColor": "green"
+        },
+        {
+            "type": "de",
+            "key": "󰖲  DE  ",
+            "keyColor": "blue"
+        },
+        {
+            "type": "wm",
+            "key": "  WM  ",
+            "keyColor": "blue"
+        },
+        {
+            "type": "wmtheme",
+            "key": "  THM ",
+            "keyColor": "blue"
+        },
+        
         //"theme",
         //"icons",
         //"font",
