--- a/bashtop/bashtop.cfg
+++ b/bashtop/bashtop.cfg
@@ -5,11 +5,11 @@
 color_theme="user_themes/dracula"
 
 #* Update time in milliseconds, increases automatically if set below internal loops processing time, recommended 2000 ms or above for better sample times for graphs
-update_ms="2600"
+update_ms="3100"
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive"
 #* "cpu lazy" updates sorting over time, "cpu responsive" updates sorting directly
-proc_sorting="cpu responsive"
+proc_sorting="memory"
 
 #* Reverse sorting order, "true" or "false"
 proc_reversed="false"
