--- a/starship.toml
+++ b/starship.toml
@@ -1,6 +1,8 @@
 # Get editor completions based on the config schema
 "$schema" = 'https://starship.rs/config-schema.json'
 
+format = '⛄ $all'
+
 # Inserts a blank line between shell prompts
 add_newline = true
 
@@ -15,6 +17,7 @@ $cmd_duration"""
 # Replace the '❯' symbol in the prompt with '➜'
 [character] # The name of the module we are configuring is 'character'
 success_symbol = '[➜](bold green)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
+error_symbol = '[➜](bold red)'
 
 [username]
 style_user = "bright-yellow bold"
