--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,28 @@
-# for powerline
-source ~/.config/tmux/powerline.conf
-# scrollllllll<up><up><down><down>
+#source ~/.config/tmux/powerline.conf
+
+# Load Powerline config if it exists
+if-shell '[ -f ~/.config/tmux/powerline.conf ]' 'source-file ~/.config/tmux/powerline.conf'
+
+# for scrolling <up><up><down><down>
 set -g mouse on
 
 # other
-#set-option -g prefix C-t
+# set-option -g prefix C-t
+
+# start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+# config reload
 bind r source-file ~/.config/tmux/tmux.conf \; display " Reloading .config/tmux/tmux.conf ..."
+
+# switch windows alt+number
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
